# Space_Robotics

./: .gitignore
src/space_panda_description/: CHANGES_SUMMARY.md  QUICK_START.md  README_ORBITAL.md  package.xml  setup.cfg  setup.py  test_orbit_commands.sh
src/space_panda_description/meshes/: cubesat.stl
src/space_panda_description/space_panda_description/: arm_demo.py  arm_joint_controller.py  camera_control_viewer.py  camera_controller.py  camera_gui_controller.py  camera_opencv_viewer.py  orbital_controller.py  pick_place_demo.py
src/space_panda_description/space_panda_description/config/: fr3_controllers.yaml
src/space_panda_description/space_panda_description/launch/: gazebo_space_panda.launch.py  gazebo_space_panda_orbital.launch.py  view_space_panda.launch.py
src/space_panda_description/space_panda_description/models/earth/: model.config  model.sdf
src/space_panda_description/space_panda_description/models/earth/materials/scripts/: earth.material
src/space_panda_description/space_panda_description/models/earth_high_res/: model.config  model.sdf
src/space_panda_description/space_panda_description/models/sun/: model.config  model.sdf
src/space_panda_description/space_panda_description/models/sun/materials/scripts/: sun.material
src/space_panda_description/space_panda_description/urdf/: space_panda.urdf.xacro
src/space_panda_description/space_panda_description/worlds/: space.sdf
